--- a/lessons/style.scss
+++ b/lessons/style.scss
@@ -15,6 +15,81 @@ ul li{list-style:none;}
 img{vertical-align:top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 /********************************************************************/
-header{
-    background-color: #445162;
+body{
+    font-family: "Arial";
 }
+.image_container{
+    height: auto;
+    width: 100%;
+}
+.container{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+.header{
+    background-color: #445162;
+    height: 320px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &_h1{
+        font-family: ArialMT;
+        font-size: 60px;
+        color: #ffffff;
+    }
+    &_list{
+        margin-top: 40px;
+    }
+    &_list>li{
+        font-family: ArialMT;
+        font-size: 20px;
+        line-height: 36px;
+        color: #ffffff;
+    }
+    &_list>li::before{
+        content: '';
+        display: inline-block;
+        background-image: url(images/check_icon.png);
+        width: 25px;
+        height: 19px;
+        margin-right: 10px;
+    }
+    &_right {
+        width: 470px;
+        height: 215px;
+        background-color: #ffffff;
+      }
+    &_right>div>img{
+        max-width: 470px;
+        height: auto;
+    }  
+}
+/********************************************************************/
+.aboute{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &_h2{
+        font-size: 30px;
+        line-height: 36px;
+        color: #445161;
+        margin-top: 50px;
+        margin-bottom: 10px;
+    }
+    &_text{
+        margin-top: 20px;
+        font-size: 16px;
+        line-height: 24px;
+        color: #333333;
+        max-width: 655px;
+    }
+    &_right{
+        margin-top: 50px;
+        width: 430px;
+        height: 245px;
+        background-color: #445161;
+    }
+    margin-bottom: 50px;
+}
+/********************************************************************/
