--- a/lessons/css/style.css
+++ b/lessons/css/style.css
@@ -74,7 +74,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /********************************************************************/
 body {
-  font-family: "Arial";
+  font-family: "ArialMT";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .image_container {
@@ -103,7 +106,6 @@ body {
 }
 
 .header_h1 {
-  font-family: ArialMT;
   font-size: 60px;
   color: #ffffff;
 }
@@ -113,7 +115,6 @@ body {
 }
 
 .header_list > li {
-  font-family: ArialMT;
   font-size: 20px;
   line-height: 36px;
   color: #ffffff;
@@ -122,7 +123,7 @@ body {
 .header_list > li::before {
   content: '';
   display: inline-block;
-  background-image: url(images/check_icon.png);
+  background-image: url(./img/check_icon.png);
   width: 25px;
   height: 19px;
   margin-right: 10px;
@@ -175,4 +176,6 @@ body {
   height: 245px;
   background-color: #445161;
 }
+
+/********************************************************************/
 /*# sourceMappingURL=style.css.map */
