--- a/lessons/scss/style.scss
+++ b/lessons/scss/style.scss
@@ -51,7 +51,7 @@ body{
     &_list>li::before{
         content: '';
         display: inline-block;
-        background-image: url(./img/check_icon.png);
+        background-image: url(../img/check_icon.png);
         width: 25px;
         height: 19px;
         margin-right: 10px;
