--- a/lessons/scss/style.scss
+++ b/lessons/scss/style.scss
@@ -15,15 +15,15 @@ ul li{list-style:none;}
 img{vertical-align:top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 /********************************************************************/
+ @font-face {
+    font-family: 'ArialMT';
+    src: url(../fonts/ARIALMT.ttf);
+}
 body{
-    font-family: "ArialMT";
+    font-family: 'ArialMT';
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-}
-.image_container{
-    height: auto;
-    width: 100%;
 }
 .container{
     max-width: 1280px;
@@ -32,23 +32,23 @@ body{
 }
 .header{
     background-color: #445162;
-    height: 320px;
+    padding: 50px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     &_h1{
         font-size: 60px;
         color: #ffffff;
+        margin-bottom: 50px;
     }
-    &_list{
-        margin-top: 40px;
-    }
-    &_list>li{
+    &_list_item{
         font-size: 20px;
-        line-height: 36px;
         color: #ffffff;
+        margin-bottom: 15px;
     }
-    &_list>li::before{
+    &_list_item:last-child{
+        margin-bottom: 0;
+    }
+    &_list_item::before{
         content: '';
         display: inline-block;
         background-image: url(../img/check_icon.png);
@@ -61,36 +61,60 @@ body{
         height: 215px;
         background-color: #ffffff;
       }
-    &_right>div>img{
+    &_img{
         max-width: 470px;
         height: auto;
     }  
 }
 /********************************************************************/
-.aboute{
+.about{
+    padding: 50px 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     &_h2{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
-        margin-top: 50px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
     &_text{
-        margin-top: 20px;
         font-size: 16px;
         line-height: 24px;
         color: #333333;
         max-width: 655px;
+        margin-bottom: 20px;
     }
-    &_right{
-        margin-top: 50px;
-        width: 430px;
-        height: 245px;
+    &_clip{
         background-color: #445161;
     }
-    margin-bottom: 50px;
 }
 /********************************************************************/
+.dignity_product{
+    padding: 50px 50px;
+    background-color: #f5f5f5;
+    &_h2{
+        font-size: 30px;
+        line-height: 36px;
+        color: #445161;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    &_list{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        align-content: center;
+        &_item{
+            display: flex;
+            margin-bottom: 30px;
+        }
+        &_item::before{
+            content: '';
+            width: 32px;
+            height: 32px;
+            display: inline-block;
+            background-image: url(../img/plus.jpg);
+            margin-right: 10px;
+        }
+    }
+}
