--- a/lessons/css/style.css
+++ b/lessons/css/style.css
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  font-family: 'ArialMT';
+  font-family: 'ArialMT' 'Arial';
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -140,7 +140,7 @@ body {
   justify-content: space-between;
 }
 
-.about_h2 {
+.about_header {
   font-size: 30px;
   line-height: 36px;
   color: #445161;
@@ -175,21 +175,103 @@ body {
 
 .dignity_product_list {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
+  justify-content: space-between;
 }
 
 .dignity_product_list_item {
   display: flex;
-  margin-bottom: 30px;
+  max-width: 525px;
+  margin: 0 0 35px 0;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #333333;
 }
 
 .dignity_product_list_item::before {
   content: '';
-  width: 32px;
-  height: 32px;
   display: inline-block;
+  padding: 16px;
   background-image: url(../img/plus.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
   margin-right: 10px;
+}
+
+/********************************************************************/
+.screenshots {
+  padding: 50px 50px;
+  background-color: #ffffff;
+}
+
+.screenshots_header {
+  font-size: 30px;
+  line-height: 36px;
+  color: #445161;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.screenshots_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.screenshots_list_item {
+  display: flex;
+  width: 49%;
+  margin-bottom: 30px;
+}
+
+.screenshots_list_item_img {
+  max-width: 200px;
+  margin-right: 15px;
+  background-color: #445161;
+}
+
+.screenshots_list_item_text {
+  max-width: 360px;
+}
+
+.screenshots_list_item_header {
+  font-size: 24px;
+  line-height: 30px;
+  color: #445161;
+}
+
+/********************************************************************/
+.reviews {
+  padding: 50px 50px;
+  background-color: #f5f5f5;
+}
+
+.reviews_header {
+  font-size: 30px;
+  line-height: 36px;
+  color: #445161;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.reviews_list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.reviews_list_item {
+  max-width: 50%;
+  display: flex;
+}
+
+.reviews_list_item_quote {
+  background-image: url(../img/bg_quote.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 485px;
 }
