--- a/lessons/scss/style.scss
+++ b/lessons/scss/style.scss
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
     src: url(../fonts/ARIALMT.ttf);
 }
 body{
-    font-family: 'ArialMT';
+    font-family: 'ArialMT' 'Arial';
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -71,7 +71,7 @@ body{
     padding: 50px 0;
     display: flex;
     justify-content: space-between;
-    &_h2{
+    &_header{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
@@ -101,20 +101,92 @@ body{
     }
     &_list{
         display: flex;
+        width: 100%;
         flex-wrap: wrap;
-        align-items: center;
-        align-content: center;
+        justify-content: space-between;
         &_item{
             display: flex;
-            margin-bottom: 30px;
+            max-width: 525px;
+            margin: 0 0 35px 0;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #333333;
         }
         &_item::before{
             content: '';
-            width: 32px;
-            height: 32px;
             display: inline-block;
+            padding: 16px;
             background-image: url(../img/plus.jpg);
+            background-repeat: no-repeat;
+            background-size: contain;
             margin-right: 10px;
+        }
+    }
+}
+/********************************************************************/
+.screenshots{
+    padding: 50px 50px;
+    background-color: #ffffff;
+    &_header{
+        font-size: 30px;
+        line-height: 36px;
+        color: #445161;
+        text-align: center;
+        margin-bottom: 35px;
+    }
+    &_list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 100%;
+        &_item{
+            display: flex;
+            width: 49%;
+            //flex-wrap: wrap;
+            margin-bottom: 30px;
+            &_img{
+                max-width: 200px;
+                margin-right: 15px;
+                background-color: #445161;
+            }
+            &_text{
+                max-width: 360px;
+            }
+            &_header{
+                font-size: 24px;
+                line-height: 30px;
+                color: #445161;
+            }
+        }
+    }
+}
+/********************************************************************/
+// Извините, на большее времени не хватило :(
+.reviews{
+    padding: 50px 50px;
+    background-color: #f5f5f5;
+    &_header{
+        font-size: 30px;
+        line-height: 36px;
+        color: #445161;
+        text-align: center;
+        margin-bottom: 35px;
+    }
+    &_list{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-between;
+        &_item{
+            max-width: 50%;
+            display: flex;
+            &_quote{
+                background-image: url(../img/bg_quote.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                max-width: 485px;
+            }
         }
     }
 }
