--- a/lessons/css/style.css
+++ b/lessons/css/style.css
@@ -182,22 +182,20 @@ body {
 
 .dignity_product_list_item {
   display: flex;
-  max-width: 525px;
+  max-width: 50%;
   margin: 0 0 35px 0;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
   color: #333333;
 }
 
 .dignity_product_list_item::before {
   content: '';
-  display: inline-block;
   padding: 16px;
+  margin: 5px 10px 0 0;
   background-image: url(../img/plus.jpg);
   background-repeat: no-repeat;
   background-size: contain;
-  margin-right: 10px;
 }
 
 /********************************************************************/
