--- a/lessons/scss/style.scss
+++ b/lessons/scss/style.scss
@@ -35,7 +35,7 @@ body{
     padding: 50px;
     display: flex;
     justify-content: space-between;
-    &_h1{
+    &_title{
         font-size: 60px;
         color: #ffffff;
         margin-bottom: 50px;
@@ -56,14 +56,8 @@ body{
         height: 19px;
         margin-right: 10px;
     }
-    &_right {
-        width: 470px;
-        height: 215px;
-        background-color: #ffffff;
-      }
     &_img{
         max-width: 470px;
-        height: auto;
     }  
 }
 /********************************************************************/
@@ -71,7 +65,7 @@ body{
     padding: 50px 0;
     display: flex;
     justify-content: space-between;
-    &_header{
+    &_title{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
@@ -85,6 +79,7 @@ body{
         margin-bottom: 20px;
     }
     &_clip{
+        max-width: 430px;
         background-color: #445161;
     }
 }
@@ -92,7 +87,7 @@ body{
 .dignity_product{
     padding: 50px 50px;
     background-color: #f5f5f5;
-    &_h2{
+    &_title{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
@@ -126,7 +121,7 @@ body{
 .screenshots{
     padding: 50px 50px;
     background-color: #ffffff;
-    &_header{
+    &_title{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
@@ -151,7 +146,7 @@ body{
             &_text{
                 max-width: 360px;
             }
-            &_header{
+            &_title{
                 font-size: 24px;
                 line-height: 30px;
                 color: #445161;
@@ -164,7 +159,7 @@ body{
 .reviews{
     padding: 50px 50px;
     background-color: #f5f5f5;
-    &_header{
+    &_title{
         font-size: 30px;
         line-height: 36px;
         color: #445161;
