--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  font-family: 'ArialMT' 'Arial';
+  font-family: 'ArialMT';
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
