--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,6 +62,7 @@ body{
     justify-content: space-between;
     &_title{
         font-size: 60px;
+        line-height: 1.2;
         color: #ffffff;
         margin-bottom: 50px;
     }
