Add defoult fonts

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
     src: url(../fonts/ARIALMT.ttf);
 }
 body{
-    font-family: 'ArialMT';
+    font-family: 'ArialMT', 'Arial', 'sans-serif';
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
