--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
   outline: none;
 }
 
+a {
+  color: #fff;
+}
+
 a:focus, a:active {
   outline: none;
 }
@@ -74,7 +78,14 @@ h1, h2, h3, h4, h5, h6 {
 /********************************************************************/
 @font-face {
   font-family: 'ArialMT';
-  src: url(../fonts/ARIALMT.ttf);
+  src: url(../fonts/ARIALMT.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Socialico";
+  src: url("../fonts/Socialico.eot?") format("eot"), url("../fonts/Socialico.woff") format("woff"), url("../fonts/Socialico.ttf") format("truetype"), url("../fonts/Socialico.svg#Socialico") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -452,6 +463,19 @@ body {
 
 .footer_contacts_list_item_img {
   margin-right: 5px;
+}
+
+.footer_contacts_social {
+  font-family: Socialico;
+  color: #ffffff;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.footer_contacts_social_list {
+  display: flex;
 }
 
 .footer_copy {
