--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
   opacity: .8;
 }
 
-.input:active, .input:hover {
+.input:active, .input:hover, .input:focus {
   opacity: 1;
 }
 
@@ -119,7 +119,7 @@ body {
   color: #445161;
 }
 
-.btn:hover {
+.btn:hover, .btn:focus {
   background-color: #445161;
   color: #fff;
   border: 1px solid #fff;
@@ -128,14 +128,6 @@ body {
 .btn:active {
   background-color: #fff;
   color: #445161;
-}
-
-a {
-  opacity: .9;
-}
-
-a:active, a:hover {
-  opacity: 1;
 }
 
 /********************************************************************/
@@ -476,6 +468,11 @@ a:active, a:hover {
 
 .footer_contacts_list_item_link {
   color: #ffffff;
+  opacity: .9;
+}
+
+.footer_contacts_list_item_link:active, .footer_contacts_list_item_link:hover {
+  opacity: 1;
 }
 
 .footer_contacts_social {
@@ -493,6 +490,11 @@ a:active, a:hover {
 
 .footer_contacts_social_list_item_link {
   color: #fff;
+  opacity: .9;
+}
+
+.footer_contacts_social_list_item_link:active, .footer_contacts_social_list_item_link:hover {
+  opacity: 1;
 }
 
 .footer_copy {
