--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ body {
 
 .btn:active {
   background-color: #fff;
+  border: 1px solid red;
   color: #445161;
 }
 
@@ -418,6 +419,7 @@ body {
 .footer_wrap {
   padding: 0 50px;
   display: flex;
+  justify-content: center;
 }
 
 .footer_form {
@@ -480,7 +482,7 @@ body {
   color: #ffffff;
   font-size: 60px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 42px;
   text-align: left;
 }
 
