textarea resize none set

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -335,6 +335,7 @@ body {
             width: 500px;
             height: 170px;
             margin-bottom: 20px;
+            resize: none;
         }
         &_btn {
             width: 140px;
