--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,9 @@ body {
     color: #445162;
     opacity: .8;
 }
-.input:active, .input:hover, .input:focus {
+.input:active, 
+ .input:hover, 
+ .input:focus {
     opacity: 1;
 }
 .btn {
@@ -58,7 +60,8 @@ body {
     font-weight: 700;
     color: #445161;
 }
-.btn:hover, .btn:focus {
+.btn:hover, 
+ .btn:focus {
     background-color: #445161;
     color: #fff;
     border: 1px solid #fff;
@@ -356,7 +359,8 @@ body {
                     color: #ffffff;
                     opacity: .8;
                 }
-                &_link:active, &_link:hover {
+                &_link:active, 
+                 &_link:hover {
                     opacity: 1;
                 }
             }
@@ -375,7 +379,8 @@ body {
                         color: #fff;
                         opacity: .8;
                     }
-                    &_link:active, &_link:hover {
+                    &_link:active, 
+                     &_link:hover {
                         opacity: 1;
                     }
                 }
